--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel= "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet">
         <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css">
     </head>
     <body>
         <header class="header">
-            <a href="" class="logo">Web<span class="logo-header">Studio</span>
-            </a>
-            <nav class="site-navigation">
+            <nav class="nav-section conteiner">
+                <a href="" class="logo">Web<span class="logo-header">Studio</span>
+                </a>
                 <ul class="nav-list list">
                     <li class="nav-item">
-                        <a href="./studio.html" class="nav-link">Студия</a>
+                        <a href="./index.html" class="nav-link">Студия</a>
                     </li>
                     <li class="nav-item">
                         <a href="./portfolio.html" class="nav-link">Портфолио</a>
@@ -25,94 +27,102 @@
                         <a href="" class="nav-link">Контакты</a>
                     </li>
                 </ul>
-            </nav>
+         
                 <ul class="contacts list">
-                    <li>
+                    <li class="contacts-item">
                         <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li>
+                    <li class="contacts-item">
                         <a class="contact-link" href="tel:+380961111111">+38(096)1111111
                         </a>
                     </li>
                 </ul>
-        
+        </nav>
         </header>
         <main>
         <!-- Cекция эффективные решения для нашего бизнеса -->
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-btn">Заказать услугу</button>
+            <div class="conteiner-hero">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="hero-btn">Заказать услугу</button>
+            </div>
         </section>
         <!-- Секция наши преимущества -->
         <section class="about section">
-            <h2 class="title">Наши преимущества</h2>
-            <ul class="list">
-                <li>
-                    <h3 class="about-subtitle subtitle">Внимание к деталям</h3>
-                    <p class="about-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="about-subtitle subtitle">Пунктуальность</h3>
-                    <p class="about-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3 class="about-subtitle subtitle">Планирование</h3>
-                    <p class="about-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3 class="about-subtitle subtitle">Современные технологии</h3>
-                    <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
+           <div class="conteiner-about">
+                <h2 class="title">Наши преимущества</h2>
+                <ul class="list">
+                    <li>
+                        <h3 class="about-subtitle subtitle">Внимание к деталям</h3>
+                        <p class="about-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <h3 class="about-subtitle subtitle">Пунктуальность</h3>
+                        <p class="about-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <h3 class="about-subtitle subtitle">Планирование</h3>
+                        <p class="about-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <h3 class="about-subtitle subtitle">Современные технологии</h3>
+                        <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+           </div>
         </section>
         <!-- Cекция чем мы занимаемся -->
         <section class="production-section">
-            <h2 class="title">Чем мы занимаемся</h2>
-            <ul class="list">
-                <li class="production-item"> 
-                    <img src="./images/img.1.jpg" alt="Изображение компьютера" width="370">
-                </li>
-                <li class="production-item"> 
-                    <img src="./images/img.2.jpg" alt="Изображение ноутбука" width="370">
-                </li>
-                <li class="production-item"> 
-                    <img src="./images/img.3.jpg" alt="Изображение планшета" width="370">
-                </li>
-            </ul>
+            <div class="conteiner-production">
+                <h2 class="title">Чем мы занимаемся</h2>
+                <ul class="list">
+                    <li class="production-item">
+                        <img src="./images/img.1.jpg" alt="Изображение компьютера" width="370">
+                    </li>
+                    <li class="production-item">
+                        <img src="./images/img.2.jpg" alt="Изображение ноутбука" width="370">
+                    </li>
+                    <li class="production-item">
+                        <img src="./images/img.3.jpg" alt="Изображение планшета" width="370">
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- Секция наша команда -->
         <section class="team-section">
-            <h2 class="title">Наша команда</h2>
-            <ul class="list">
-                <li class="team-item">
-                <img src="./images/IgorDem.jpg" alt="фото Игоря Демьяненко" width="270">
-                    <div class="specialist-description">  
-                        <h3 class="name-title subtitle"> Игорь Демьяненко</h3>
-                        <p class="position-text"> Product Designer</p>
-                    </div> 
-                </li>
-                <li class="team-item">
-                    <img src="./images/OlgaRepina.jpg" alt="фото Ольги Репиной" width="270">
-                    <div class="specialist-description"> 
-                        <h3 class="name-title subtitle"> Ольга Репина </h3>
-                        <p class="position-text"> Frontend Developer</p>
-                    </div>
-                </li>
-                <li class="team-item">
-                    <img src="./images/NikolayTarasov.jpg" alt="фото Николая Тарасова" width="270">
-                    <div class="specialist-description"> 
-                        <h3 class="name-title subtitle"> Николай Тарасов </h3>
-                        <p class="position-text"> Marketing</p>
-                    </div>
-                </li>
-                <li class="team-item">
-                    <img src="./images/mihailermakov.jpg" alt="фото Михаила Ермакова" width="270">
-                    <div class="specialist-description">   
-                        <h3 class="name-title subtitle">Михаил Ермаков</h3>
-                        <p class="position-text"> UI Designer</p>
-                    </div>
-                </li>
-            </ul>
+            <div class="conteiner">
+                <h2 class="title">Наша команда</h2>
+                <ul class="list">
+                    <li class="team-item">
+                        <img src="./images/IgorDem.jpg" alt="фото Игоря Демьяненко" width="270">
+                        <div class="specialist-description">
+                            <h3 class="name-title subtitle"> Игорь Демьяненко</h3>
+                            <p class="position-text"> Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/OlgaRepina.jpg" alt="фото Ольги Репиной" width="270">
+                        <div class="specialist-description">
+                            <h3 class="name-title subtitle"> Ольга Репина </h3>
+                            <p class="position-text"> Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/NikolayTarasov.jpg" alt="фото Николая Тарасова" width="270">
+                        <div class="specialist-description">
+                            <h3 class="name-title subtitle"> Николай Тарасов </h3>
+                            <p class="position-text"> Marketing</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/mihailermakov.jpg" alt="фото Михаила Ермакова" width="270">
+                        <div class="specialist-description">
+                            <h3 class="name-title subtitle">Михаил Ермаков</h3>
+                            <p class="position-text"> UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
         </main>
         <footer class="footer">
