--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header class="header">
-        <a href="" class="logo">Web<span class="logo-header">Studio</span>
-        </a>
         <nav class="site-navigation">
+            <a href="" class="logo">Web<span class="logo-header">Studio</span>
+            </a>
             <ul class="nav-list list">
                 <li class="nav-item">
-                    <a href="./studio.html" class="nav-link">Студия</a>
+                    <a href="./index.html" class="nav-link">Студия</a>
                 </li>
                 <li class="nav-item">
                     <a href="./portfolio.html" class="nav-link">Портфолио</a>
@@ -40,98 +40,101 @@
     </header>
     <main class="portfolio-main">
         <section class="portfolio-section">
-            <h1 class="title">Наши работы</h1>
-            <ul class="portfolio-list">
-                <li class="portfolio-item list">
-                    <button type="button" class="filter-btn">Все</button>
-                </li>
-                <li class="portfolio-item list">
-                    <button type="button" class="filter-btn">Веб-сайты</button>
-                </li>
-                <li class="portfolio-item list">
-                   <button type="button" class="filter-btn">Приложения</button>
-                </li>
-                <li class="portfolio-item list">
-                   <button type="button" class="filter-btn">Дизайн</button>
-                </li>
-                <li class="portfolio-item list">
-                    <button type="button" class="filter-btn">Маркетинг</button>
-                </li>
-            </ul>
-            <ul>
-                <li class="company-projects list">
-                    <a href=""> <img src="./images/технокряк.jpg" alt="Главная страница сайта" width="370">
-                    <div class="projects-description">
-                        <h2 class="project-name">Технокряк</h2>
-                        <p class="project-type" >Веб-сайт</p>
-                    </div>
-                    </a>
-                </li>
-                <li class="company-projects list">
-                    <a href=""><img src="./images/poster.jpg" alt="Изображение постера New Orlean vs Golden Star" width="370">
-                       <div class="projects-description">
-                            <h2 class="project-name">Постер New Orlean vs Golden Starк</h2>
-                            <p class="project-type" >Дизайн</p>
-                        </div>
-                    </a> 
-                </li>
-                <li class="company-projects list">
-                    <a href=""><img src="./images/ресторан.jpg" alt="Изображение приложения ресторана Sea food" width="370">
-                    <div class="projects-description">   
-                        <h2 class="project-name">Ресторан Seafood</h2>
-                        <p class="project-type" >Приложение</p>
-                    </div>
-                    </a> 
-                </li>
-                <li class="company-projects list">
-                    <a href=""><img src="./images/проект-прайм.jpg" alt="Изображение проекта прайм" width="370">
-                    <div class="projects-description"> 
-                         <h2 class="project-name">Проект Prime</h2>
-                         <p class="project-type" >Маркетинг</p>
-                    </div>
-                    </a> 
-                </li>
-                <li class="company-projects list">
-                    <a href=""><img src="./images/проект-боксес.jpg" alt="Изображение проекта боксес" width="370">
-                      <div class="projects-description"> 
-                        <h2 class="project-name">Проект Boxes</h2>
-                        <p class="project-type" >Маркетинг</p>
-                      </div>
-                    </a> 
-                </li>
-                <li class="company-projects list">
-                    <a href=""><img src="./images/inspiration.jpg" alt="Изображение веб-сайта Inspiration has no borders" width="370">
-                       <div class="projects-description"> 
-                            <h2 class="project-name">Inspiration has no Borders</h2>
-                            <p class="project-type" >Веб-сайт</p>
-                        </div>
-                    </a>
-                 </li>
-                <li class="company-projects list">
-                    <a href=""><img src="./images/издание.jpg" alt="Изображение издания Limited edition" width="370">
-                       <div class="projects-description"> 
-                           <h2 class="project-name">Издание Limited Edition</h2>
-                           <p class="project-type" >Дизайн</p>
-                        </div>
-                    </a> 
-                </li>
-                <li class="company-projects list">
-                    <a href=""><img src="./images/проект-Lab.jpg" alt="Изображение Proect Lab" width="370">
-                       <div class="projects-description"> 
-                            <h2 class="project-name">Проект LAB</h2>
-                            <p class="project-type" >Маркетинг</p>
-                        </div>
-                    </a> 
-                </li>
-                <li class="company-projects list">
-                    <a href=""><img src="./images/growing.jpg" alt="Изображение приложения Growing business" width="370">
-                        <div class="projects-description"> 
-                            <h2 class="project-name">Growing Business</h2>
-                            <p class="project-type" >Приложение</p>
-                        </div>
-                    </a> 
-                </li>
-             </ul>
+            <div>
+                <h1 class="title">Наши работы</h1>
+                <ul class="portfolio-list">
+                    <li class="portfolio-item list">
+                        <button type="button" class="filter-btn">Все</button>
+                    </li>
+                    <li class="portfolio-item list">
+                        <button type="button" class="filter-btn">Веб-сайты</button>
+                    </li>
+                    <li class="portfolio-item list">
+                        <button type="button" class="filter-btn">Приложения</button>
+                    </li>
+                    <li class="portfolio-item list">
+                        <button type="button" class="filter-btn">Дизайн</button>
+                    </li>
+                    <li class="portfolio-item list">
+                        <button type="button" class="filter-btn">Маркетинг</button>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="company-projects list">
+                        <a href=""> <img src="./images/технокряк.jpg" alt="Главная страница сайта" width="370">
+                            <div class="projects-description">
+                                <h2 class="project-name">Технокряк</h2>
+                                <p class="project-type">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="company-projects list">
+                        <a href=""><img src="./images/poster.jpg" alt="Изображение постера New Orlean vs Golden Star" width="370">
+                            <div class="projects-description">
+                                <h2 class="project-name">Постер New Orlean vs Golden Starк</h2>
+                                <p class="project-type">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="company-projects list">
+                        <a href=""><img src="./images/ресторан.jpg" alt="Изображение приложения ресторана Sea food" width="370">
+                            <div class="projects-description">
+                                <h2 class="project-name">Ресторан Seafood</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="company-projects list">
+                        <a href=""><img src="./images/проект-прайм.jpg" alt="Изображение проекта прайм" width="370">
+                            <div class="projects-description">
+                                <h2 class="project-name">Проект Prime</h2>
+                                <p class="project-type">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="company-projects list">
+                        <a href=""><img src="./images/проект-боксес.jpg" alt="Изображение проекта боксес" width="370">
+                            <div class="projects-description">
+                                <h2 class="project-name">Проект Boxes</h2>
+                                <p class="project-type">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="company-projects list">
+                        <a href=""><img src="./images/inspiration.jpg" alt="Изображение веб-сайта Inspiration has no borders"
+                                width="370">
+                            <div class="projects-description">
+                                <h2 class="project-name">Inspiration has no Borders</h2>
+                                <p class="project-type">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="company-projects list">
+                        <a href=""><img src="./images/издание.jpg" alt="Изображение издания Limited edition" width="370">
+                            <div class="projects-description">
+                                <h2 class="project-name">Издание Limited Edition</h2>
+                                <p class="project-type">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="company-projects list">
+                        <a href=""><img src="./images/проект-Lab.jpg" alt="Изображение Proect Lab" width="370">
+                            <div class="projects-description">
+                                <h2 class="project-name">Проект LAB</h2>
+                                <p class="project-type">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="company-projects list">
+                        <a href=""><img src="./images/growing.jpg" alt="Изображение приложения Growing business" width="370">
+                            <div class="projects-description">
+                                <h2 class="project-name">Growing Business</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
