--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header class="header">
-            <nav class="nav-section conteiner">
+            <nav class="nav-section container">
                 <a href="" class="logo">Web<span class="logo-header">Studio</span>
                 </a>
                 <ul class="nav-list list">
@@ -41,41 +41,36 @@
         </header>
         <main>
         <!-- Cекция эффективные решения для нашего бизнеса -->
-        <section class="hero">
-            <div class="conteiner-hero">
+        <section class="hero container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="hero-btn">Заказать услугу</button>
-            </div>
         </section>
         <!-- Секция наши преимущества -->
-        <section class="about section">
-           <div class="conteiner-about">
+        <section class="container about section" >
                 <h2 class="title">Наши преимущества</h2>
-                <ul class="list">
-                    <li>
+                <ul class="about-list list">
+                    <li class="about-item">
                         <h3 class="about-subtitle subtitle">Внимание к деталям</h3>
                         <p class="about-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
+                    <li class="about-item">
                         <h3 class="about-subtitle subtitle">Пунктуальность</h3>
                         <p class="about-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li>
+                    <li class="about-item">
                         <h3 class="about-subtitle subtitle">Планирование</h3>
                         <p class="about-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="about-item">
                         <h3 class="about-subtitle subtitle">Современные технологии</h3>
                         <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
-           </div>
         </section>
         <!-- Cекция чем мы занимаемся -->
-        <section class="production-section">
-            <div class="conteiner-production">
+        <section class="production section container">
                 <h2 class="title">Чем мы занимаемся</h2>
-                <ul class="list">
+                <ul class="production-list list">
                     <li class="production-item">
                         <img src="./images/img.1.jpg" alt="Изображение компьютера" width="370">
                     </li>
@@ -86,55 +81,49 @@
                         <img src="./images/img.3.jpg" alt="Изображение планшета" width="370">
                     </li>
                 </ul>
-            </div>
         </section>
         <!-- Секция наша команда -->
-        <section class="team-section">
-            <div class="conteiner">
+        <section class="team section container">
                 <h2 class="title">Наша команда</h2>
-                <ul class="list">
+                <ul class="team-list list">
                     <li class="team-item">
                         <img src="./images/IgorDem.jpg" alt="фото Игоря Демьяненко" width="270">
-                        <div class="specialist-description">
                             <h3 class="name-title subtitle"> Игорь Демьяненко</h3>
                             <p class="position-text"> Product Designer</p>
-                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/OlgaRepina.jpg" alt="фото Ольги Репиной" width="270">
-                        <div class="specialist-description">
                             <h3 class="name-title subtitle"> Ольга Репина </h3>
                             <p class="position-text"> Frontend Developer</p>
-                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/NikolayTarasov.jpg" alt="фото Николая Тарасова" width="270">
-                        <div class="specialist-description">
                             <h3 class="name-title subtitle"> Николай Тарасов </h3>
                             <p class="position-text"> Marketing</p>
-                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/mihailermakov.jpg" alt="фото Михаила Ермакова" width="270">
-                        <div class="specialist-description">
+                        
                             <h3 class="name-title subtitle">Михаил Ермаков</h3>
                             <p class="position-text"> UI Designer</p>
-                        </div>
+                       
                     </li>
                 </ul>
-            </div>
         </section>
         </main>
-        <footer class="footer">
+        <footer class="footer section container">
             <a href="" class="logo">Web<span class="logo-footer">Studio</span>
             </a>
-            <address class="company-adress"> г. Киев, пр-т Леси Украинки, 26</address>
-                <ul class="contacts list">
-                    <li>
+            <ul class="contacts list">
+                    <li class="footer-items"> 
+                        <address class="company-adress"> г. Киев, пр-т Леси Украинки, 26
+                        </address>
+                    </li>
+                    <li class="footer-items">
                         <a class="footer-contact-link" href="mailto:info@devstudio.com">info@devstudio.com
                         </a>
                     </li>
-                    <li>
+                    <li class="footer-items">
                         <a class="footer-contact-link" href="tel:+380961111111">+38(096) 111 11 11
                         </a>
                     </li>
