--- a/index.html
+++ b/index.html
@@ -88,25 +88,31 @@
                 <ul class="team-list list">
                     <li class="team-item">
                         <img src="./images/IgorDem.jpg" alt="фото Игоря Демьяненко" width="270">
-                            <h3 class="name-title subtitle"> Игорь Демьяненко</h3>
-                            <p class="position-text"> Product Designer</p>
+                           <div class="team-member">  
+                                <h3 class="name-title subtitle"> Игорь Демьяненко</h3>
+                                <p class="position-text"> Product Designer</p>
+                            </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/OlgaRepina.jpg" alt="фото Ольги Репиной" width="270">
-                            <h3 class="name-title subtitle"> Ольга Репина </h3>
-                            <p class="position-text"> Frontend Developer</p>
+                           <div class="team-member"> 
+                                <h3 class="name-title subtitle"> Ольга Репина </h3>
+                                <p class="position-text"> Frontend Developer</p>
+                            </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/NikolayTarasov.jpg" alt="фото Николая Тарасова" width="270">
-                            <h3 class="name-title subtitle"> Николай Тарасов </h3>
-                            <p class="position-text"> Marketing</p>
+                           <div class="team-member">  
+                               <h3 class="name-title subtitle"> Николай Тарасов </h3>
+                               <p class="position-text"> Marketing</p>
+                           </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/mihailermakov.jpg" alt="фото Михаила Ермакова" width="270">
-                        
+                        <div class="team-member">  
                             <h3 class="name-title subtitle">Михаил Ермаков</h3>
                             <p class="position-text"> UI Designer</p>
-                       
+                        </div>
                     </li>
                 </ul>
         </section>
