--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </header>
         <main>
         <!-- Cекция эффективные решения для нашего бизнеса -->
-        <section class="hero container">
+        <section class="hero container section">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
