--- a/portfolio.html
+++ b/portfolio.html
@@ -138,8 +138,8 @@
                             </a>
                         </li>
                     </ul>
-                    
-        </section>
+                </div>
+         </section>
     </main>
     <footer class="footer-section section">
         <div class="footer-container container">
