--- a/portfolio.html
+++ b/portfolio.html
@@ -66,10 +66,10 @@
                     <ul class="projects-list">
                         <li class="company-projects list">
                             <a href=""> <img src="./images/технокряк.jpg" alt="Главная страница сайта" width="370">
-                                
+                                <div class="projects-description">
                                     <h2 class="project-name">Технокряк</h2>
                                     <p class="project-type">Веб-сайт</p>
-                                
+                                </div>
                             </a>
                         </li>
                         <li class="company-projects list">
